--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,18 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+.idea/.idea.SBS_Bachelor/.idea/contentModel.xml
+.idea/.idea.SBS_Bachelor/.idea/encodings.xml
+.idea/.idea.SBS_Bachelor/.idea/misc.xml
+.idea/.idea.SBS_Bachelor/.idea/indexLayout.xml
+.idea/.idea.SBS_Bachelor/.idea/modules.xml
+.idea/.idea.SBS_Bachelor/.idea/vcs.xml
+.idea/.idea.SBS_Bachelor/.idea/workspace.xml
+.idea/.idea.SBS_Bachelor/riderModule.iml
+Assets/Plugins.meta
+Assets/Plugins/Editor.meta
+Assets/Plugins/Editor/JetBrains.meta
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Full.Repacked.dll
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Full.Repacked.dll.meta
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll
+Assets/Plugins/Editor/JetBrains/JetBrains.Rider.Unity.Editor.Plugin.Repacked.dll.meta
